test/valid_samples/null.mc
void main() {
    int *a;
    a = NULL;
    bool *b;
    b = NULL;
    char *c;
    c = NULL;
}