test/semantic_errors/invalid_binaryop13.mc
void main() {
    int res;
    int a;
    char b;
    res = a - b; /* cannot subtract int with char */
}